--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,31 +6,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-upload:
+  build:
     runs-on: ubuntu-latest
     steps:
-
-      - name: Build & Upload Pack
-        uses: Sindercube/Packr@main
+      - name: Run PackSquash
+        uses: ComunidadAylas/PackSquash-action@v4
         with:
+          packsquash_version: latest
+          options: packsquash.toml
 
-          filename: Blocky Dripstone.zip
-          parts: |
-            blocky_dripstone/*
-          output-directory: build/ 
-          optimize-files: true
-          minecraft-versions: |
-            1.17.1
-            1.18.2
-            1.19.4
+      - name: Publish Packs
+        uses: Kir-Antipov/mc-publish@v3.3
+        with:
+            files: "build/Spittin' Bars.zip"
+        
+            name: "${{ github.event.release.name }}"
+            version: "${{ github.event.release.tag_name }}"
+            version-type: ${{ github.event.release.prerelease && 'beta' || 'release' }}
+            changelog: "${{ github.event.release.body }}"
 
-          modrinth-id: '2AdSDHZQ'
-          github-repo: ${{ github.event.repository.full_name }}
+            game-versions: |
+              >=1.12.2
 
-          release-name: ${{ github.event.release.name }}
-          release-version: ${{ github.event.release.tag_name }}
-          changelog: ${{ github.event.release.body }}
-          prerelease: ${{ github.event.release.prerelease }}
+            github-tag: "${{ github.event.release.tag_name }}"
+            github-token: "${{ secrets.GITHUB_TOKEN }}"
 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+            modrinth-id: "${{ vars.MODRINTH_ID }}"
+            modrinth-token: "${{ secrets.MODRINTH_TOKEN }}"
+            modrinth-version-type: ${{ github.event.release.prerelease && 'beta' || 'release' }}
