--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,12 @@
-name: "Build & Upload Resource Pack"
-
 on:
   release:
     types: [published]
-  workflow_dispatch:
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Run PackSquash
         uses: ComunidadAylas/PackSquash-action@v4
