--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,33 +3,45 @@ on:
     types: [published]
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
+      - name: Clone Repository
+        uses: actions/checkout@v4
       - name: Run PackSquash
         uses: ComunidadAylas/PackSquash-action@v4
         with:
           packsquash_version: latest
-          options: packsquash.toml
+          options: ./packsquash.toml
 
-      - name: Publish Packs
+  publish:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    needs: build
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+      - name: Rename Pack
+        run: mv build/pack.zip Spittin' Bars v${{ github.event.release.tag_name }}.zip
+      - name: Publish Pack
         uses: Kir-Antipov/mc-publish@v3.3
         with:
-            files: "build/Spittin' Bars.zip"
-        
-            name: "${{ github.event.release.name }}"
-            version: "${{ github.event.release.tag_name }}"
-            version-type: ${{ github.event.release.prerelease && 'beta' || 'release' }}
-            changelog: "${{ github.event.release.body }}"
+          files: "build/Spittin' Bars v${{ github.event.release.tag_name }}.zip"
+      
+          name: "${{ github.event.release.name }}"
+          version: "${{ github.event.release.tag_name }}"
+          version-type: ${{ github.event.release.prerelease && 'beta' || 'release' }}
+          changelog: "${{ github.event.release.body }}"
 
-            game-versions: |
-              >=1.12.2
+          game-versions: |
+            >=1.13
 
-            github-tag: "${{ github.event.release.tag_name }}"
-            github-token: "${{ secrets.GITHUB_TOKEN }}"
+          github-tag: "${{ github.event.release.tag_name }}"
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
 
-            modrinth-id: "${{ vars.MODRINTH_ID }}"
-            modrinth-token: "${{ secrets.MODRINTH_TOKEN }}"
-            modrinth-version-type: ${{ github.event.release.prerelease && 'beta' || 'release' }}
+          modrinth-id: "${{ vars.MODRINTH_ID }}"
+          modrinth-token: "${{ secrets.MODRINTH_TOKEN }}"
+          modrinth-version-type: ${{ github.event.release.prerelease && 'beta' || 'release' }}
