--- a/packsquash.toml
+++ b/packsquash.toml
@@ -1,3 +1,3 @@
 pack_directory = "pack"
-output_file_path = "build/Spittin' Bars.zip"
+output_file_path = "build/pack.zip"
 recompress_compressed_files = true
