--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v4
       - name: Rename Pack
-        run: mv build/pack.zip Spittin' Bars v${{ github.event.release.tag_name }}.zip
+        run: "mv build/pack.zip \"Spittin' Bars v${{ github.event.release.tag_name }}.zip\""
       - name: Publish Pack
         uses: Kir-Antipov/mc-publish@v3.3
         with:
